app/globals.css
@import url("https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

.cursive {
  font-family: "Space Grotesk", sans-serif;
  letter-spacing: 0.05em;
}
.Welcome-text {
  background: linear-gradient(
      0deg,
      rgba(255, 255, 255, 0.4),
      rgba(255, 255, 255, 0.4)
    ),
    linear-gradient(90.01deg, #06b6d4 0.01%, #3b82f6 50.01%, #60a5fa 100%);
  background-blend-mode: normal, screen;
  -webkit-background-clip: text;
  background-clip: text;
  -webkit-text-fill-color: transparent;
}
.Welcome-box {
  isolation: isolate;
  overflow: hidden;
  align-items: center;
  -webkit-backdrop-filter: blur(6px);
  backdrop-filter: blur(6px);
  border-radius: 32px;
  box-shadow: inset 0 -7px 11px #06b6d41f;
  display: flex;

  position: relative;
  width: fit-content;
  max-width: 100%;
  transition: 0.45s cubic-bezier(0.6, 0.6, 0, 1) box-shadow;
}

.button-primary {
  background: linear-gradient(
      180deg,
      rgba(6, 182, 212, 0) 0%,
      rgba(6, 182, 212, 0.32) 100%
    ),
    rgba(59, 130, 246, 0.12);
  box-shadow: inset 0 0 12px #06b6d43d;
}
.button-primary:hover {
  background: linear-gradient(
      180deg,
      rgba(6, 182, 212, 0) 0%,
      rgba(6, 182, 212, 0.42) 100%
    ),
    rgba(59, 130, 246, 0.24);
  box-shadow: inset 0 0 12px #06b6d470;
}

/* Hide scrollbar for IE, Edge and Firefox */
.scrollbar-hidden {
  -ms-overflow-style: none; /* IE and Edge */
  scrollbar-width: none; /* Firefox */
}
.scrollbar-hidden::-webkit-scrollbar {
  display: none;
}

html {
  scroll-behavior: smooth;
}

